# api-notes-rust

./: .env  Cargo.toml  docker-compose.yml
migrations/: 001_notes_create_table.sql  002_tags_create_table.sql  003_note_tags_create_table.sql  004_categories_create_table.sql  005_note_categories_create_table.sql  main.rs  run.rs
migrations/database/: config.rs  errors.rs
src/: main.rs
src/core/: cors.rs  logs.rs  mod.rs  router.rs
src/core/database/: errors.rs
src/module/: mod.rs
src/module/categories/: controller.rs  models.rs  router.rs
src/module/categories/querys/: add_category.sql  count_categories.sql  delete_categories.sql  get_categories.sql  get_one_category.sql  update_category.sql
src/module/default/: controller.rs  mod.rs  models.rs  router.rs  types.rs
src/module/notes/: controller.rs  models.rs  router.rs
src/module/notes/querys/: add_note.sql  count_notes.sql  delete_notes.sql  get_notes.sql  get_one_note.sql  schema.sql  update_note.sql
src/module/notes_tags/: controller.rs  models.rs
src/module/notes_tags/querys/: add_tags_in_note.sql  delete_tags_in_note.sql  delete_tags_in_note_tags.sql  get_tags_relationship.sql  update_tags_in_note.sql
src/module/tags/: controller.rs  mod.rs  models.rs  router.rs
src/module/tags/querys/: add_tag.sql  count_tags.sql  delete_tags.sql  get_one_tag.sql  get_tags.sql  update_tag.sql
src/utils/: mod.rs  querys.rs
