[package]
name = "main"
version = "0.1.0"
edition = "2021"

default-run = "main"

[[bin]]
name = "migrations"
path = "migrations/main.rs"

[dependencies]
utility-types = "0.0.4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.7"
env_logger = "0.11"
dotenvy = "0.15"
log = "0.4"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
confik = "0.11.7"
derive_more = { version = "1.0.0", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.11"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
ordermap = { version="0.5.3", features = ["serde"] }
actix-cors = "0.7.0"
